[IMG-1532] Sonar issues
Signed-off-by: marifunf <marianne.funfrock@rte-france.com>